dgm-lib v1.x.xinput
 * Added basic collision detection between VisionCone and Point

dgm-lib v1.8.1
 * Removed dshlibs includes from final package

dgm-lib v1.8.0
 * Removed dsh::Config dependency in dgm::Window
	* Replaced with dgm::WindowSettings
 * Removed dsh::LevelD dependency in dgm::Mesh, dgm::TileSet and dgm::Path
	* This only affected overloaded convenience constructors

dgm-lib v1.7.0
 * **IMPORTANT:** dgm-lib is now compiled with VS22 (version 17.x), toolset v143. Release artifact naming had changed to reflect this.
 * Added dgm::VisionCone object along with collision detection method between cones and circles
	* Supposed to be used for AI vision
 * dgm::AnimationStates now work by their own instead of std::shared_ptr. dgm::ResourceManager returns references to them and dgm::Animation accepts a const reference to use them so it is still possible to reuse the same AnimationStates object between multiple Animation objects without ever making unneeded copies.
 * Fixed dgm::Controller::bindInput throwing assert then trying to bind distinct inputs
 * Fixed missing virtual destructors on interface classes
	* Compiler now issues an error when that happens
 * Fixed missing includes to LoaderInterface and JsonLoader in dgm.hpp
 * Fixed dgm::Animation crashing when default constructor was invoked
 * Fixed bug in dgm::NavMesh where getPath crashed after few queries because its internal structures got into inconsistent state
 * Removed noexcept requirement on dgm::Clip::getFrame so out-of-bounds indices are checked
 * Removed RingBuffer and Shell modules as they were not used/finished anyway
 * Removed dsh::Strings dependency as it was not used anymore

dgm-lib v1.6.1
 * Removed dgm::Animation constructor which accepts path to configuration file (use dgm::JsonLoader instead)

dgm-lib v1.6.0
 * Added Math::radialDifference for computing difference between angles
 * dgm::Clip and dgm::AnimationStates can be now loaded from JSON via dgm::JsonLoader